--- a/_config.yml
+++ b/_config.yml
@@ -9,3 +9,6 @@ exclude:
         run: |
           gem install liquid
           liquid parse frontend/node_modules/balanced-match/README.md
+          plugins:
+  - jekyll-feed
+
